# EGO

./: .gitignore  AGENTS.md  CODEX_MEMORY.md  LEGACY.md  PROJECT_MEMORY.md  README.md  TASK_PROTO_SELF_KERNEL_V1.md  conftest.py  emotiond.db.backup_20260302_175546  hard_gate_one_liner.txt  out.json  pyproject.toml  test_smoke.py  test_structure_simple.py  verify_structure.py  verify_typecheck.py  verify_typecheck_simple.py
legacy/ego-pre-handmade-mainline/EgoCore/: .env.example  .gitignore  .p1_failure_attribution_tmp.py  .p1_parse_check_tmp.py  README.md  SHIM_REGISTER.md  WORKSPACE_SYNC_NOTE.md  demo_phase3.py  pyproject.toml  requirements.txt  restart.bat  test_phase3.py  test_phase4.py  任务单.md
legacy/ego-pre-handmade-mainline/EgoCore/app/: __init__.py  cli.py  config.py  live_process_version.py  logger.py  main.py  repo_paths.py  restore_runtime.py  telegram_agent.py  telegram_bot.py  telegram_evidence_collector.py  telegram_runtime_bridge.py  telegram_runtime_result.py
legacy/ego-pre-handmade-mainline/EgoCore/config/: app.yaml  canonical_repos.yaml  llm.yaml  memory.yaml  metrics.yaml  openemotion.yaml  prompts.yaml  telegram.yaml  tools.yaml
legacy/ego-pre-handmade-mainline/EgoCore/contracts/: CONTRACT_VERSIONING_RULES.md  EVENT_INPUT_CONTRACT.md  OPENEMOTION_OUTPUT_CONTRACT.md  event_input.schema.json  openemotion_output.schema.json  proto_self_v2.schema.json  registry.json  registry.json.bak  restore_audit.schema.json  self_model.schema.json
legacy/ego-pre-handmade-mainline/EgoCore/docs/: 01_PROJECT_OVERVIEW.md  02_SYSTEM_FLOW.md  03_BOUNDARY_AND_OWNERSHIP.md  05_DEPRECATED_AND_SHIMS.md  06_AGENT_ONBOARDING.md  07_DOC_SYSTEM_MAINTENANCE.md  DOC_SYSTEM_BUILD_REPORT.md  EgoCore P2-B.txt  EgoCore 后续功能模块化开发规约.txt  MODULE_DEVELOPMENT_STANDARD.md  (+13 more)
legacy/ego-pre-handmade-mainline/OpenEmotion/: .gitignore  LICENSE  Makefile  README.md  progress-630db4f8-d8d7-491e-8d72-855e83540fe2.txt  progress-d6ac2162-33a2-4340-8e8b-e2f3f607fdfc.txt  progress-fd81bb6c-8e97-4c87-a588-6000a2d689f4.txt  pyproject.toml  pytest.ini  verify_core_simple.py  verify_event_endpoint.py  verify_prediction_error.py  verify_prediction_error_detailed.py  verify_us002.py
(+5390 files in other folders)
